src/objects/FieloAlpha__Agreement__c.object
<CustomObject>
    <customHelpPage>FieloAlpha__AgreementHelpBackEnd</customHelpPage>
    <fields>
        <fullName>FieloAlpha__Agreement__c</fullName>
        <description>Name of the agreement</description>
        <inlineHelpText>Enter the text of the agreement.</inlineHelpText>
        <label>Agreement</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program to which this agreement belongs.</description>
        <inlineHelpText>Select the program to which this agreement belongs.</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloAlpha__Program__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Status__c</fullName>
        <description>This field allow to follow the lifecycle of an agreement:
Draft: user is writting the next release
Current: As soon as a draft is finish and active, it becomes as Current version, so this is the active one, and each one a member access to the front end or mobile, he has to &quot;check it&quot; as agreed.
Deprecated: Once a new version is Current, previous Current is Deprecated.
Remember that if &quot;Use Agreement&quot; is unchecked for the corresponding program, no agreement will be shown in the front end.</description>
        <inlineHelpText>Set the status for this agreement. You can have only one active agreement per program.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deprecated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Agreement</label>
    <listViews>
        <fullName>FieloAlpha__All_Agreements</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Program__c</columns>
        <columns>FieloAlpha__Agreement__c</columns>
        <columns>FieloAlpha__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Agreements</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Version</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <recordTypes>
        <fullName>FieloAlpha__Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloAlpha__Draft</fullName>
        <active>true</active>
        <label>Draft</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloAlpha__ModifyProgram</fullName>
        <active>true</active>
        <description>Is not possible to modify the associated Program</description>
        <errorConditionFormula>ISCHANGED(FieloAlpha__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloAlpha__Program__c)))</errorConditionFormula>
        <errorDisplayField>FieloAlpha__Program__c</errorDisplayField>
        <errorMessage>Is not possible to modify the associated Program</errorMessage>
    </validationRules>
</CustomObject>